--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+* {
+    font-family: "Poppins", sans-serif;
+}
+
 body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: "Poppins", sans-serif;
-    color: black;
 }
